--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "keywords": [],
   "dependencies": {
     "@builderbot/bot": "1.2.2",
-    "@builderbot/provider-baileys": "1.2.2"
+    "@builderbot/provider-baileys": "1.2.2",
+    "dotenv": "^16.4.5",
+    "openai": "^4.67.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
@@ -21,8 +23,8 @@
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.52.0",
     "eslint-plugin-builderbot": "latest",
-    "rollup": "^4.10.0",
     "nodemon": "^3.1.0",
+    "rollup": "^4.10.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
