--- a/package.json
+++ b/package.json
@@ -12,16 +12,24 @@
   },
   "keywords": [],
   "dependencies": {
+    "@adiwajshing/baileys": "^5.0.0",
+    "@builderbot-plugins/langchain": "1.0.0-alpha.0",
     "@builderbot/bot": "1.2.2",
     "@builderbot/provider-baileys": "1.2.2",
+    "@langchain/core": "^0.3.18",
+    "@langchain/openai": "^0.3.13",
     "dotenv": "^16.4.5",
-    "openai": "^4.67.3"
+    "fluent-ffmpeg": "^2.1.3",
+    "openai": "^4.67.3",
+    "vectordb": "^0.1.4"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "eslint": "^8.52.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
+    "eslint-define-config": "^2.1.0",
     "eslint-plugin-builderbot": "latest",
     "nodemon": "^3.1.0",
     "rollup": "^4.10.0",
