--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@builderbot/provider-baileys": "1.2.2",
     "@langchain/core": "^0.3.18",
     "@langchain/openai": "^0.3.13",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.67.3",
