--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DEFAULT_LANGUAGE=es
 DOMAIN=chatbot.patiodelivery.com
 CLIENT_MERCHANT_ID=123
 MERCHANT_DEFAULT_ID=123
+PROVIDER_ASSETS_ORDER=default
+PROVIDER_ASSETS_MENU=default
